--- a/Eventa.Mobile/Eventa/Views/Main/MainPageView.axaml
+++ b/Eventa.Mobile/Eventa/Views/Main/MainPageView.axaml
@@ -2,8 +2,10 @@
     x:Class="Eventa.Views.Main.MainPageView"
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:converters="clr-namespace:Eventa.Converters;assembly=Eventa"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:models="using:Eventa.Models.Events"
     xmlns:vm="clr-namespace:Eventa.ViewModels.Main"
     d:DesignHeight="750"
     d:DesignWidth="800"
@@ -64,7 +66,7 @@
         <Style Selector="Button.DropdownItem">
             <Setter Property="Padding" Value="16,8" />
             <Setter Property="HorizontalAlignment" Value="Stretch" />
-            <Setter Property="HorizontalContentAlignment" Value="Left" />
+            <Setter Property="HorizontalContentAlignment" Value="Center" />
             <Setter Property="Background" Value="Transparent" />
             <Setter Property="BorderThickness" Value="0" />
             <Setter Property="Cursor" Value="Hand" />
@@ -85,8 +87,14 @@
             <Setter Property="Padding" Value="0" />
             <Setter Property="Margin" Value="0" />
         </Style>
-    </UserControl.Styles>
 
+        <Style Selector="ItemsControl > ContentPresenter:last-child StackPanel > Separator">
+            <Setter Property="IsVisible" Value="False" />
+        </Style>
+    </UserControl.Styles>
+    <UserControl.Resources>
+        <converters:StringNotEmptyConverter x:Key="StringNotEmpty" />
+    </UserControl.Resources>
     <Grid RowDefinitions="Auto, *">
         <!--  Header with Navigation  -->
         <Border
@@ -144,13 +152,21 @@
                                 Background="White"
                                 BoxShadow="0 4 12 0 #30000000"
                                 CornerRadius="8">
-                                <StackPanel Spacing="4">
-                                    <Button Classes="DropdownItem" Content="Concerts" />
-                                    <Button Classes="DropdownItem" Content="Theaters" />
-                                    <Button Classes="DropdownItem" Content="Stand-Up" />
-                                    <Button Classes="DropdownItem" Content="Tours" />
-                                    <Button Classes="DropdownItem" Content="Philharmonic" />
-                                </StackPanel>
+                                <ItemsControl ItemsSource="{Binding BrowseTags}">
+                                    <ItemsControl.ItemTemplate>
+                                        <DataTemplate x:DataType="models:BrowseTagItemModel">
+                                            <StackPanel Spacing="4">
+                                                <Button
+                                                    Classes="DropdownItem"
+                                                    Command="{Binding $parent[UserControl].((vm:MainPageViewModel)DataContext).NavigateToTagCommand}"
+                                                    CommandParameter="{Binding}"
+                                                    Content="{Binding TagName}"
+                                                    IsEnabled="{Binding !IsError}" />
+                                                <Separator Background="#E0E0E0" IsVisible="{Binding !IsLastItem}" />
+                                            </StackPanel>
+                                        </DataTemplate>
+                                    </ItemsControl.ItemTemplate>
+                                </ItemsControl>
                             </Border>
                         </Flyout>
                     </Button.Flyout>
@@ -180,15 +196,36 @@
                                 Background="White"
                                 BoxShadow="0 4 12 0 #30000000"
                                 CornerRadius="8">
-                                <StackPanel Spacing="4">
-                                    <Button Classes="DropdownItem" Content="My Profile" />
-                                    <Button Classes="DropdownItem" Content="My Tickets" />
-                                    <Separator Background="#E0E0E0" />
-                                    <Button
-                                        Classes="DropdownItem"
-                                        Content="Log Out"
-                                        Foreground="#FF8181" />
-                                </StackPanel>
+                                <Grid>
+                                    <StackPanel IsVisible="{Binding UserId, Converter={StaticResource StringNotEmpty}}" Spacing="4">
+                                        <Button
+                                            Classes="DropdownItem"
+                                            Command="{Binding NavigateToMyProfileCommand}"
+                                            Content="My Profile" />
+                                        <Separator Background="#E0E0E0" />
+                                        <Button
+                                            Classes="DropdownItem"
+                                            Command="{Binding NavigateToMyTicketsCommand}"
+                                            Content="My Tickets" />
+                                        <Separator Background="#E0E0E0" />
+                                        <Button
+                                            Classes="DropdownItem"
+                                            Command="{Binding LogoutCommand}"
+                                            Content="Log Out"
+                                            Foreground="#FF8181" />
+                                    </StackPanel>
+                                    <StackPanel IsVisible="{Binding UserId, Converter={StaticResource StringNotEmpty}, ConverterParameter=Invert}" Spacing="4">
+                                        <Button
+                                            Classes="DropdownItem"
+                                            Command="{Binding LoginCommand}"
+                                            Content="Login" />
+                                        <Separator Background="#E0E0E0" />
+                                        <Button
+                                            Classes="DropdownItem"
+                                            Command="{Binding RegisterCommand}"
+                                            Content="Register" />
+                                    </StackPanel>
+                                </Grid>
                             </Border>
                         </Flyout>
                     </Button.Flyout>
@@ -197,236 +234,6 @@
         </Border>
 
         <!--  Main Content  -->
-        <ScrollViewer Grid.Row="1">
-            <Grid RowDefinitions="*, auto">
-                <StackPanel Margin="16" Spacing="16">
-                    <!--  Filter Section  -->
-                    <Border
-                        MaxHeight="250"
-                        Padding="16"
-                        Background="White"
-                        BoxShadow="0 2 8 0 #20000000"
-                        CornerRadius="12">
-                        <ScrollViewer>
-                            <UniformGrid Columns="3">
-                                <!--  Date Filters  -->
-                                <Button
-                                    Grid.Row="0"
-                                    Grid.Column="0"
-                                    Margin="4"
-                                    Classes="FilterButton Selected"
-                                    Content="Top Events" />
-                                <Button
-                                    Grid.Row="0"
-                                    Grid.Column="1"
-                                    Margin="4"
-                                    Classes="FilterButton"
-                                    Content="Any Date" />
-                                <Button
-                                    Grid.Row="0"
-                                    Grid.Column="2"
-                                    Margin="4"
-                                    Classes="FilterButton"
-                                    Content="Today" />
-                                <Button
-                                    Grid.Row="1"
-                                    Grid.Column="0"
-                                    Margin="4"
-                                    Classes="FilterButton"
-                                    Content="This Week" />
-                                <Button
-                                    Grid.Row="1"
-                                    Grid.Column="1"
-                                    Margin="4"
-                                    Classes="FilterButton"
-                                    Content="On Weekend" />
-                                <Button
-                                    Grid.Row="1"
-                                    Grid.Column="2"
-                                    Margin="4"
-                                    Classes="FilterButton">
-                                    <StackPanel Orientation="Horizontal" Spacing="4">
-                                        <PathIcon
-                                            Width="14"
-                                            Height="14"
-                                            Data="M9,10V12H7V10H9M13,10V12H11V10H13M17,10V12H15V10H17M19,3A2,2 0 0,1 21,5V19A2,2 0 0,1 19,21H5C3.89,21 3,20.1 3,19V5A2,2 0 0,1 5,3H6V1H8V3H16V1H18V3H19M19,19V8H5V19H19Z"
-                                            Foreground="#666666" />
-                                        <TextBlock Text="Choose" />
-                                        <PathIcon
-                                            Width="10"
-                                            Height="10"
-                                            Data="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
-                                            Foreground="#666666" />
-                                    </StackPanel>
-                                </Button>
-                            </UniformGrid>
-                        </ScrollViewer>
-                    </Border>
-                    <Border
-                        MaxHeight="150"
-                        Padding="16"
-                        Background="White"
-                        BoxShadow="0 2 8 0 #20000000"
-                        CornerRadius="12">
-                        <ScrollViewer ScrollViewer.IsScrollChainingEnabled="False">
-                            <UniformGrid Rows="4">
-                                <!--  Category Checkboxes  -->
-                                <CheckBox Content="Concerts" IsChecked="True" />
-                                <CheckBox Content="Theaters" />
-                                <CheckBox Content="Stand-Up" />
-                                <CheckBox Content="Tours" />
-                                <CheckBox Content="Anime" />
-                                <CheckBox Content="Cosplay" />
-                            </UniformGrid>
-                        </ScrollViewer>
-                    </Border>
-
-                    <!--  Events Grid  -->
-                    <UniformGrid Columns="2" Rows="2">
-                        <!--  Event Card 1  -->
-                        <Border
-                            Background="White"
-                            BoxShadow="0 2 8 0 #20000000"
-                            CornerRadius="12">
-                            <Grid RowDefinitions="120, Auto">
-                                <!--  Event Image  -->
-                                <Border
-                                    Grid.Row="0"
-                                    Background="#E0E0E0"
-                                    CornerRadius="12,12,0,0" />
-
-                                <!--  Event Details  -->
-                                <Border Grid.Row="1" Padding="12">
-                                    <Grid RowDefinitions="Auto, Auto, Auto, Auto, Auto">
-                                        <!--  Title  -->
-                                        <TextBlock
-                                            Grid.Row="0"
-                                            FontFamily="{StaticResource Kadwa}"
-                                            FontSize="14"
-                                            FontWeight="SemiBold"
-                                            Foreground="#333333"
-                                            Text="Title"
-                                            TextAlignment="Center" />
-
-                                        <!--  Date, Time  -->
-                                        <StackPanel
-                                            Grid.Row="1"
-                                            Margin="0,6,0,0"
-                                            HorizontalAlignment="Center"
-                                            Orientation="Horizontal"
-                                            Spacing="4">
-                                            <PathIcon Data="M9,10V12H7V10H9M13,10V12H11V10H13M17,10V12H15V10H17M19,3A2,2 0 0,1 21,5V19A2,2 0 0,1 19,21H5C3.89,21 3,20.1 3,19V5A2,2 0 0,1 5,3H6V1H8V3H16V1H18V3H19M19,19V8H5V19H19Z" Foreground="#999999" />
-                                            <TextBlock
-                                                VerticalAlignment="Center"
-                                                FontFamily="{StaticResource Kadwa}"
-                                                FontSize="11"
-                                                Foreground="#666666"
-                                                Text="Date, Time">
-                                                <TextBlock.RenderTransform>
-                                                    <TranslateTransform Y="1.5" />
-                                                </TextBlock.RenderTransform>
-                                            </TextBlock>
-                                        </StackPanel>
-
-                                        <!--  City  -->
-                                        <TextBlock
-                                            Grid.Row="2"
-                                            Margin="0,2,0,0"
-                                            FontFamily="{StaticResource Kadwa}"
-                                            FontSize="11"
-                                            Foreground="#666666"
-                                            Text="City"
-                                            TextAlignment="Center" />
-
-                                        <!--  Price  -->
-                                        <StackPanel
-                                            Grid.Row="3"
-                                            Margin="0,6,0,10"
-                                            HorizontalAlignment="Center"
-                                            Orientation="Horizontal"
-                                            Spacing="3">
-                                            <PathIcon
-                                                Width="12"
-                                                Height="12"
-                                                Data="M7,15H9C9,16.08 10.37,17 12,17C13.63,17 15,16.08 15,15C15,13.9 13.96,13.5 11.76,12.97C9.64,12.44 7,11.78 7,9C7,7.21 8.47,5.69 10.5,5.18V3H13.5V5.18C15.53,5.69 17,7.21 17,9H15C15,7.92 13.63,7 12,7C10.37,7 9,7.92 9,9C9,10.1 10.04,10.5 12.24,11.03C14.36,11.56 17,12.22 17,15C17,16.79 15.53,18.31 13.5,18.82V21H10.5V18.82C8.47,18.31 7,16.79 7,15Z"
-                                                Foreground="#666666" />
-                                            <TextBlock
-                                                VerticalAlignment="Center"
-                                                FontFamily="{StaticResource Kadwa}"
-                                                FontSize="12"
-                                                FontWeight="SemiBold"
-                                                Foreground="#666666"
-                                                Text="Price">
-                                                <TextBlock.RenderTransform>
-                                                    <TranslateTransform Y="1.5" />
-                                                </TextBlock.RenderTransform>
-                                            </TextBlock>
-                                        </StackPanel>
-
-                                        <!--  Buy Button  -->
-                                        <Button
-                                            Margin="25,0,25,0"
-                                            Padding="0"
-                                            HorizontalAlignment="Stretch"
-                                            Classes="BuyButton"
-                                            CornerRadius="20">
-                                            <Button.RenderTransform>
-                                                <TranslateTransform Y="120" />
-                                            </Button.RenderTransform>
-                                            <TextBlock
-                                                FontWeight="Bold"
-                                                Text="Buy"
-                                                TextAlignment="Center" />
-                                        </Button>
-                                    </Grid>
-                                </Border>
-                            </Grid>
-                        </Border>
-                    </UniformGrid>
-
-                </StackPanel>
-                <!--  Footer  -->
-                <Border
-                    Grid.Row="1"
-                    Padding="16,12"
-                    Background="#FFB5B5">
-                    <Grid ColumnDefinitions="*, Auto, Auto">
-                        <!--  Logo  -->
-                        <TextBlock
-                            Grid.Column="0"
-                            VerticalAlignment="Center"
-                            FontFamily="{StaticResource JustAnotherHand}"
-                            FontSize="32"
-                            Foreground="White"
-                            Text="EVENTA" />
-
-                        <!--  Footer Links  -->
-                        <Button
-                            Grid.Column="1"
-                            Margin="0,0,12,0"
-                            Padding="8,4"
-                            VerticalAlignment="Center"
-                            Background="Transparent"
-                            BorderThickness="0"
-                            Content="About Us"
-                            Cursor="Hand"
-                            FontFamily="{StaticResource Kadwa}"
-                            FontSize="12"
-                            Foreground="White" />
-                        <Button
-                            Grid.Column="2"
-                            Padding="8,4"
-                            VerticalAlignment="Center"
-                            Background="Transparent"
-                            BorderThickness="0"
-                            Content="Contact Us"
-                            Cursor="Hand"
-                            FontFamily="{StaticResource Kadwa}"
-                            FontSize="12"
-                            Foreground="White" />
-                    </Grid>
-                </Border>
-            </Grid>
-        </ScrollViewer>
+        <UserControl Grid.Row="1" Content="{Binding CurrentPage, Mode=OneWay}" />
     </Grid>
 </UserControl>
